--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
     "dependencies": {
         "axios": "^0.26.1",
         "body-parser": "^1.20.0",
+        "cloudinary": "^1.30.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
         "express": "^4.17.3",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.5.0",
         "mongoose": "^6.2.10",
+        "morgan": "^1.10.0",
         "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2",
         "nodemon": "^2.0.15"
