--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^0.26.1",
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
         "cloudinary": "^1.30.0",
         "cors": "^2.8.5",
+        "cryptr": "^6.0.3",
         "dotenv": "^16.0.1",
         "express": "^4.17.3",
         "jsonwebtoken": "^8.5.1",
