--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "compressorjs": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "postcss": "^8.4.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
