--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2",
+        "nodemailer": "^6.7.5",
         "nodemon": "^2.0.15"
     }
 }
