--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
         "multer": "^1.4.4",
         "multer-gridfs-storage": "^5.0.2",
         "nodemailer": "^6.7.5",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "socket.io": "^4.5.1"
     }
 }
