--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,13 @@
     "name": "server",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
+    "engines": {
+        "node": "16.13.2",
+        "npm": "8.14.0"
+    },
     "scripts": {
-        "start": "nodemon index.js"
+        "start": "node index.js"
     },
     "keywords": [],
     "author": "",
@@ -26,6 +30,7 @@
         "multer-gridfs-storage": "^5.0.2",
         "nodemailer": "^6.7.5",
         "nodemon": "^2.0.15",
+        "serve": "^14.0.1",
         "socket.io": "^4.5.1"
     }
 }
