--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
         "node": "16.x"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node server.js"
     },
     "keywords": [],
     "author": "",
