--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "server.js",
     "engines": {
-        "node": "16.x"
+        "node": "16.13.2",
+        "npm": "8.14.0"
     },
     "scripts": {
         "start": "node server.js"
@@ -25,7 +26,7 @@
         "mongodb": "^4.5.0",
         "mongoose": "^6.2.10",
         "morgan": "^1.10.0",
-        "multer": "^1.4.4",
+        "multer": "^1.3.0",
         "multer-gridfs-storage": "^5.0.2",
         "nodemailer": "^6.7.5",
         "nodemon": "^2.0.15",
