--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
         "npm": "8.14.0"
     },
     "scripts": {
-        "start": "node server.js"
+        "start": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
